hermes_ws/log/build_2024-04-03_12-23-26/cmd_vel/stderr.log
  File "/home/hermes/Hermes/hermes_ws/install/cmd_vel/lib/python3.10/site-packages/cmd_vel/cmd_vel_controll.py", line 50
    except KeyboardInterrupt:
    ^^^^^^
SyntaxError: invalid syntax

